# ideas-pipeline

./: .gitignore  README.md  pyproject.toml
ideas/: __init__.py  capture.py  cli.py  config.py  models.py  promote.py  review.py  storage.py
scripts/: ingest_obsidian_to_graphiti.py  poll_gmail_tostage.py  poll_pdf_dropfolder.py  poll_telegram_queue.py  poll_x_bookmarks.py
scripts/launchagents/: com.matias.ideas-gmail-tostage.plist  com.matias.ideas-graphiti-ingest.plist  com.matias.ideas-pdf-dropfolder.plist  com.matias.ideas-telegram-queue.plist  com.matias.ideas-x-bookmarks.plist
tests/: test_gmail_tostage.py  test_graphiti_ingest.py  test_pdf_dropfolder.py  test_pipeline.py  test_telegram_queue.py  test_x_bookmarks.py
